# Alibaba_sample

./: .gitignore
backend/: .gitignore  README.md  deploy_render_webservice.md  docker-compose.yml  main.py  pyproject.toml
backend/configs/: settings.toml
backend/scripts/: migrate_schema.sql
backend/src/: main.py
backend/src/agents/: __init__.py  orchastrator.py  test.py
backend/src/api/v1/: router.py  schema.py
backend/src/api/v1/endpoints/webhooks/: __init__.py  telegram.py  telegram_auth.py  telegram_client.py
backend/src/core/: __init__.py  config.py  database.py  error_handler.py  exceptions.py  logger.py
backend/src/instructions/: orchastrator.txt  test.txt
backend/src/llm/: __init__.py  model_catalog.py  model_resolver.py
backend/src/models/: __init__.py
backend/src/tools/: indonesian_current_time.py  structured_output.py
backend/src/tools/chart/: __init__.py  chart_renderer.py  generate_chart.py  storage_manager.py
backend/src/tools/serper_api/: __init__.py  client.py  serper_google_search.py  serper_web_scrap.py
backend/src/tools/sql_db/: __init__.py  client.py  get_db_schema.py  query_db.py  write_budgets.py  write_transactions.py
backend/src/utils/: agent_helper.py  rds_helper.py
backend/tests/: drop_tables.py  query_db.py  test_bug_condition.py  test_preservation.py  tool_calling_db.py
frontend/: README.md  deploy_vercel.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/context/: AuthContext.test.tsx  AuthContext.tsx
(+20 files in other folders)
